Added Image to Website

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <title>TEST FOR GITHUB MINI COURSE</title>
 </head>
 <body>
+    <img src="IMG_5581.JPG"/>
     <h2>Welcome to myWebSite</h2>
 </body>
